# shop_project

./: README.md  class_diagram.puml  er_model.drawio  main.py  pyproject.toml  requirements.txt
src/: database.py  db.py  db_models.py  edges.py  functions.py  main.py  models.py  schema.py
src/documents/: AGB.txt  AGBs.docx  Aktivitätsdiagramm.drawio  Datenschutz.docx  Datenschutz.txt  ERD (1).drawio  Impressum.docx  Impressum.txt  UML.drawio
src/static/: cart.html  checkout.html  confirmation.html  datenschutz.html  impressum.html  index.html  order.html  result.html  shop.html  welcome.html
